Modified theme tags in style.css and in readme, added link to theme in footer and logo, contact us and about us buttons in theme options

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Reviewgine Affiliate
-Theme URI: http://www.readythemes.com/reviewgine-lite/
+Theme URI: themeisle.com
 Description: Reviewgine Affiliate is a free WordPress theme built for the next generation of affiliate marketing websites. With a great SEO, cutting-edge design, integrated widgets, advanced theme options and an advanced review system is all you need for starting making money online.
-Author: ReadyThemes
-Author URI: http://www.readythemes.com
+Author: codeinwp
+Author URI: Codeinwp.com
 Version: 1.1.0
 Tags: blue, white,light,gray,green,yellow, custom-background, threaded-comments, sticky-post, microformats, custom-menu, two-columns, one-column, right-sidebar, fixed-layout, responsive-layout, custom-colors, featured-images, full-width-template, theme-options, translation-ready 
 
-License: GNU General Public License
+License: GNU General Public License v2
 License URI: license.txt
 Reviewgine Affiliate is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
 */
